bindings/rust/src/ffi.rs


#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_service_kind_t {
    ZLINK_SERVICE_KIND_DISCOVERY = 1,
    ZLINK_SERVICE_KIND_SPOT_SUB = 3,
    ZLINK_SERVICE_KIND_SPOT_PUB = 4,
    ZLINK_SERVICE_KIND_SOCKET = 5,
}

pub type zlink_discovery_monitor_event_mask_t = u32;
pub type zlink_spot_monitor_event_mask_t = u32;
pub type zlink_service_event_detail_mask_t = u32;
pub type zlink_service_monitor_event_mask_t = u32;

pub const ZLINK_DISCOVERY_MONITOR_EVENT_ERROR: u32 = 1 << 4;
pub const ZLINK_DISCOVERY_MONITOR_EVENT_SERVICE_UP: u32 = 1 << 5;
pub const ZLINK_DISCOVERY_MONITOR_EVENT_SERVICE_DOWN: u32 = 1 << 6;
pub const ZLINK_DISCOVERY_MONITOR_EVENT_PROVIDERS_CHANGED: u32 = 1 << 7;
pub const ZLINK_DISCOVERY_MONITOR_EVENT_CLOSED: u32 = 1 << 17;

pub const ZLINK_SERVICE_EVENT_DETAIL_SERVICE_NAME: u32 = 0x0001;
pub const ZLINK_SERVICE_EVENT_DETAIL_ENDPOINT: u32 = 0x0002;
pub const ZLINK_SERVICE_EVENT_DETAIL_SUBJECT_RID: u32 = 0x0004;
pub const ZLINK_SERVICE_EVENT_DETAIL_PEER_RID: u32 = 0x0008;
pub const ZLINK_SERVICE_EVENT_DETAIL_SUBJECT: u32 = 0x0010;
pub const ZLINK_SERVICE_EVENT_DETAIL_SUBJECT_KIND: u32 = 0x0020;

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_service_event_subject_kind_t {
    ZLINK_SERVICE_EVENT_SUBJECT_NONE = 0,
    ZLINK_SERVICE_EVENT_SUBJECT_TOPIC = 1,
    ZLINK_SERVICE_EVENT_SUBJECT_PATTERN = 2,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_service_event_t {
    pub service_kind: zlink_service_kind_t,
    pub event_type: u32,
    pub status: i32,
    pub error_code: i32,
    pub value: u32,
    pub detail_flags: zlink_service_event_detail_mask_t,
    pub service_name: [c_char; 256],
    pub endpoint: [c_char; 256],
    pub routing_id: zlink_routing_id_t,
    pub subject: [c_char; 256],
    pub subject_kind: u32,
}

pub type zlink_service_monitor_event_t = zlink_service_event_t;

pub type zlink_service_monitor_handler_fn =
    unsafe extern "C" fn(event: *const zlink_service_event_t, userdata: *mut c_void);

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_service_monitor_open_options_t {
    pub events: zlink_service_monitor_event_mask_t,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_monitor_target_kind_t {
    ZLINK_MONITOR_TARGET_SOCKET = 1,
    ZLINK_MONITOR_TARGET_DISCOVERY = 2,
    ZLINK_MONITOR_TARGET_SPOT = 4,
    ZLINK_MONITOR_TARGET_SPOT_NODE = 5,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_spot_role_t {
    ZLINK_SPOT_ROLE_PUB = 1,
    ZLINK_SPOT_ROLE_SUB = 2,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_spot_node_state_t {
    ZLINK_SPOT_NODE_STATE_IDLE = 1,
    ZLINK_SPOT_NODE_STATE_CONNECTING = 2,
    ZLINK_SPOT_NODE_STATE_PARTIAL_READY = 3,
    ZLINK_SPOT_NODE_STATE_READY = 4,
    ZLINK_SPOT_NODE_STATE_ERROR = 5,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_spot_node_status_t {
    pub service_name: [c_char; 256],
    pub local_endpoint: [c_char; 256],
    pub node_routing_id: zlink_routing_id_t,
    pub state: zlink_spot_node_state_t,
    pub configured_peer_count: u32,
    pub active_peer_count: u32,
    pub connected_peer_count: u32,
    pub subject_count: u32,
    pub ready_subject_count: u32,
    pub last_error: i32,
    pub last_changed_ms: u64,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_spot_peer_source_t {
    ZLINK_SPOT_PEER_SOURCE_MANUAL = 1,
    ZLINK_SPOT_PEER_SOURCE_DISCOVERY = 2,
    ZLINK_SPOT_PEER_SOURCE_MIXED = 3,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_spot_peer_state_t {
    ZLINK_SPOT_PEER_STATE_CONFIGURED = 1,
    ZLINK_SPOT_PEER_STATE_CONNECTING = 2,
    ZLINK_SPOT_PEER_STATE_CONNECTED = 3,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_spot_node_peer_entry_t {
    pub service_name: [c_char; 256],
    pub local_endpoint: [c_char; 256],
    pub peer_endpoint: [c_char; 256],
    pub source: zlink_spot_peer_source_t,
    pub state: zlink_spot_peer_state_t,
    pub connected_since_ms: u64,
    pub last_changed_ms: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_spot_node_peer_filter_t {
    pub peer_endpoint: [c_char; 256],
    pub source: zlink_spot_peer_source_t,
    pub state: zlink_spot_peer_state_t,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_spot_node_subject_entry_t {
    pub role: zlink_spot_role_t,
    pub subject: [c_char; 256],
    pub subject_kind: u32,
    pub ready_peer_count: u32,
    pub active_peer_count: u32,
    pub last_changed_ms: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_spot_node_subject_filter_t {
    pub role: zlink_spot_role_t,
    pub subject: [c_char; 256],
    pub subject_kind: u32,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_registry_state_t {
    ZLINK_REGISTRY_STATE_IDLE = 1,
    ZLINK_REGISTRY_STATE_ACTIVE = 2,
    ZLINK_REGISTRY_STATE_DEGRADED = 3,
    ZLINK_REGISTRY_STATE_ERROR = 4,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_registry_status_t {
    pub registry_id: u32,
    pub bind_endpoint: [c_char; 256],
    pub state: zlink_registry_state_t,
    pub topology_entry_count: u32,
    pub peer_registry_count: u32,
    pub connected_peer_registry_count: u32,
    pub list_seq: u64,
    pub last_error: i32,
    pub last_changed_ms: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_registry_service_summary_entry_t {
    pub service_kind: zlink_service_kind_t,
    pub service_role: zlink_service_role_t,
    pub service_name: [c_char; 256],
    pub total_count: u32,
    pub connecting_count: u32,
    pub ready_count: u32,
    pub error_count: u32,
    pub stopped_count: u32,
    pub last_reported_ms: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_registry_service_summary_filter_t {
    pub service_kind: zlink_service_kind_t,
    pub service_role: zlink_service_role_t,
    pub service_name: [c_char; 256],
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_member_peer_entry_t {
    pub service_type: zlink_service_type_t,
    pub service_role: u16,
    pub service_name: [c_char; 256],
    pub endpoint: [c_char; 256],
    pub routing_id: zlink_routing_id_t,
    pub value: i64,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_topology_source_t {
    ZLINK_TOPOLOGY_SOURCE_MANUAL = 1,
    ZLINK_TOPOLOGY_SOURCE_DISCOVERY = 2,
    ZLINK_TOPOLOGY_SOURCE_REGISTRY = 3,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_topology_state_t {
    ZLINK_TOPOLOGY_STATE_DISCOVERED = 1,
    ZLINK_TOPOLOGY_STATE_CONNECTING = 2,
    ZLINK_TOPOLOGY_STATE_READY = 3,
    ZLINK_TOPOLOGY_STATE_LOST = 4,
    ZLINK_TOPOLOGY_STATE_ERROR = 5,
    ZLINK_TOPOLOGY_STATE_STOPPED = 6,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_registry_topology_entry_t {
    pub routing_id: zlink_routing_id_t,
    pub service_kind: zlink_service_kind_t,
    pub service_role: zlink_service_role_t,
    pub service_name: [c_char; 256],
    pub endpoint: [c_char; 256],
    pub source: zlink_topology_source_t,
    pub state: zlink_topology_state_t,
    pub desired_count: u32,
    pub ready_count: u32,
    pub error_code: u32,
    pub last_reported_ms: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_registry_topology_filter_t {
    pub service_kind: zlink_service_kind_t,
    pub service_role: zlink_service_role_t,
    pub service_name: [c_char; 256],
    pub routing_id: zlink_routing_id_t,
    pub state: zlink_topology_state_t,
    pub source: zlink_topology_source_t,
}

// ---------------------------------------------------------------------------
// Poller types
// ---------------------------------------------------------------------------

#[cfg(all(target_os = "windows", target_pointer_width = "64"))]
pub type zlink_fd_t = u64;
#[cfg(all(target_os = "windows", target_pointer_width = "32"))]
pub type zlink_fd_t = c_uint;
#[cfg(not(target_os = "windows"))]
pub type zlink_fd_t = c_int;

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_pollitem_t {
    pub socket: *mut c_void,
    pub fd: zlink_fd_t,
    pub events: i16,
    pub revents: i16,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_poller_event_t {
    pub socket: *mut c_void,
    pub fd: zlink_fd_t,
    pub user_data: *mut c_void,
    pub events: i16,
}

pub const ZLINK_POLLIN: i16 = 1;
pub const ZLINK_POLLOUT: i16 = 2;
pub const ZLINK_POLLERR: i16 = 4;

// ---------------------------------------------------------------------------
// Extern "C" functions
// ---------------------------------------------------------------------------

unsafe extern "C" {
    // -- Error / version ---------------------------------------------------
    pub fn zlink_errno() -> c_int;
    pub fn zlink_strerror(errnum: c_int) -> *const c_char;
    pub fn zlink_version(major: *mut c_int, minor: *mut c_int, patch: *mut c_int);

    // -- Context -----------------------------------------------------------
    pub fn zlink_ctx_new() -> *mut c_void;
    pub fn zlink_ctx_term(ctx: *mut c_void) -> c_int;
    pub fn zlink_ctx_shutdown(ctx: *mut c_void) -> c_int;
    pub fn zlink_ctx_set(ctx: *mut c_void, option: zlink_ctx_option_t, optval: c_int) -> c_int;
    pub fn zlink_ctx_get(ctx: *mut c_void, option: zlink_ctx_option_t) -> c_int;

    // -- Message -----------------------------------------------------------
    pub fn zlink_msg_init(msg: *mut zlink_msg_t) -> c_int;
    pub fn zlink_msg_init_size(msg: *mut zlink_msg_t, size: usize) -> c_int;
    pub fn zlink_msg_init_data(
        msg: *mut zlink_msg_t,
        data: *mut c_void,
        size: usize,
        ffn: Option<zlink_free_fn>,
        hint: *mut c_void,
    ) -> c_int;
    pub fn zlink_msg_close(msg: *mut zlink_msg_t) -> c_int;
    pub fn zlink_msg_move(dest: *mut zlink_msg_t, src: *mut zlink_msg_t) -> c_int;
    pub fn zlink_msg_copy(dest: *mut zlink_msg_t, src: *mut zlink_msg_t) -> c_int;
    pub fn zlink_msg_data(msg: *mut zlink_msg_t) -> *mut c_void;
    pub fn zlink_msg_size(msg: *const zlink_msg_t) -> usize;
    pub fn zlink_msg_refcnt(msg: *const zlink_msg_t) -> c_int;
    pub fn zlink_msg_gets(msg: *const zlink_msg_t, property: *const c_char) -> *const c_char;

    // -- Socket create / close ---------------------------------------------
    pub fn zlink_socket(ctx: *mut c_void, typ: zlink_socket_type_t) -> *mut c_void;
    pub fn zlink_close(socket: *mut c_void) -> c_int;

    // -- Callback handlers -------------------------------------------------
    pub fn zlink_recv_handler(
        socket: *mut c_void,
        handler: zlink_socket_msg_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_subscribe_handler(
        socket: *mut c_void,
        handler: zlink_subscribe_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_send_ready_handler(
        socket: *mut c_void,
        handler: zlink_send_ready_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
